--- a/Front/src/Componentes/BigCard/bigCard.css
+++ b/Front/src/Componentes/BigCard/bigCard.css
@@ -1,10 +1,10 @@
-.bigCardPokeParamsDesc{
+.bigCardPokeParamsDesc {
     color: #666666;
-    font-size: small ;
+    font-size: small;
     text-align: center;
 }
 
-#bigCardDiv{
+#bigCardDiv {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
@@ -12,27 +12,27 @@
     border-radius: 5px;
 }
 
-#bigCardBottomDiv{
-    
+#bigCardBottomDiv {
+
     display: grid;
-    grid-template-columns:1fr ;
-    grid-template-rows:  50px 100px 50px 80px 80px 1fr;
-    grid-template-areas:"asd" 
-                        "tipos"
-                         "about"
-                         "pokeParams"
-                         "desc"
-                         "stats" ;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 100px 50px 80px 80px 1fr;
+    grid-template-areas: "asd"
+        "tipos"
+        "about"
+        "pokeParams"
+        "desc"
+        "stats";
     margin: 5px;
     border-radius: 5px;
     background-color: white;
 }
 
-#bigCardName{
+#bigCardName {
     margin-top: 20px;
     margin-left: 30px;
     grid-area: nombre;
-    color:white;
+    color: white;
     size: 32px;
 }
 
@@ -46,9 +46,10 @@
     display: grid;
     grid-template-columns: 80px 1fr 80px;
     grid-template-rows: 60px 1fr 60px;
-     grid-template-areas: "back nombre id"
-                "previous image next";
+    grid-template-areas: "back nombre id"
+        "previous image next";
 }
+
 #bigCardArrow {
     background-repeat: no-repeat;
     width: 32px;
@@ -56,16 +57,16 @@
     background-image: url("../../../public/images/arrow-left.svg");
     margin-top: 25px;
     margin-left: 50px;
-    grid-area: back ;
+    grid-area: back;
 }
 
 #bigCardId {
-    
+
     font-size: 1rem;
     color: white;
     grid-area: id;
     margin-top: 20px;
-    
+
 }
 
 #bigCardPokeImg {
@@ -78,42 +79,44 @@
     width: 200px;
 }
 
-.bigCardPokeStageImg{
+.bigCardPokeStageImg {
     z-index: 2;
     display: inline;
     position: relative;
     top: -150px;
     height: 100px;
     width: 100px;
-    margin:auto;
+    margin: auto;
 }
 
 
 
-#bigCardPokeImg:hover{
+#bigCardPokeImg:hover {
     top: 80px;
 }
 
 
-#bigCardEvosDiv{
+#bigCardEvosDiv {
     grid-area: about;
 }
+
 #bigCardPAbout {
     text-align: center;
     z-index: 3;
 }
 
-#bigCardPEvos{
-    display:none;
-}
-#bigCardPAbout:hover + #bigCardPEvos{
-    flex-direction: row;
-    
-    display:flex;
+#bigCardPEvos {
+    display: none;
 }
 
-#bigCardPAbout:not :hover + #bigCardPEvos{
-    display:none;
+#bigCardPAbout:hover+#bigCardPEvos {
+    flex-direction: row;
+
+    display: flex;
+}
+
+#bigCardPAbout:not :hover+#bigCardPEvos {
+    display: none;
 }
 
 #bigCardTipos {
@@ -125,7 +128,7 @@
     align-items: center;
 }
 
-.tipo{ 
+.tipo {
     color: white;
     border-radius: 30px;
     margin: 5px;
@@ -135,9 +138,9 @@
 #bigCardPokeParams {
     grid-area: pokeParams;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-areas: "weight height abilities";
-    
+
 }
 
 #bigCardWeight {
@@ -146,7 +149,7 @@
     grid-template-rows: 1fr 1fr;
     grid-area: weight;
     grid-template-areas: "img value"
-                          "weight weight"   ;
+        "weight weight";
 }
 
 #bigCardHeight {
@@ -155,7 +158,7 @@
     grid-template-rows: 1fr 1fr;
     grid-area: height;
     grid-template-areas: "img value"
-                          "height height"   ;
+        "height height";
 }
 
 #bigCardAbilities {
@@ -167,7 +170,7 @@
 }
 
 .bigCardPokeParamsSmall {
-       font-size: small;
+    font-size: small;
 }
 
 #bigCardParamsHeight {
@@ -175,15 +178,15 @@
 }
 
 #bigCardParamsWeight {
-      grid-area: weight;
- }
+    grid-area: weight;
+}
 
- #bigCardDesc{
+#bigCardDesc {
     grid-area: desc;
     text-align: left;
     padding: 0px 30px;
     font-size: 14px;
- }
+}
 
 #bigCardStats {
     display: grid;
@@ -192,26 +195,26 @@
     text-align: right;
     grid-area: stats;
     grid-template-areas: "stats stats stats"
-                         "nombres valores barras";
+        "nombres valores barras";
 }
 
 #bigCardStatNames {
     display: grid;
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: repeat(6, 1fr);
     grid-template-columns: 1fr;
     grid-area: nombres;
 }
 
 #bigCardStatValues {
     display: grid;
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: repeat(6, 1fr);
     grid-template-columns: 1fr;
     grid-area: valores;
 }
 
 #bigCardStatBars {
     display: grid;
-    grid-template-rows: repeat(6,1fr);
+    grid-template-rows: repeat(6, 1fr);
     grid-template-columns: 1fr;
     grid-area: barras;
 }
@@ -232,19 +235,19 @@
     margin-top: 5px;
     border-radius: 20px 0px 0px 20px;
     height: 10px;
-    
-     
+
+
 }
 
 .bigCardStatsRest {
     border-radius: 0px 20px 20px 0px;
     height: 10px;
     margin-top: 5px;
-   
-} 
+
+}
 
 .bigCardContentStats {
-    display: flex ;
+    display: flex;
     flex-direction: row;
 }
 
@@ -265,8 +268,8 @@
     background-size: cover;
     width: 16px;
     height: 32px;
-    position:relative;
-    top:48px;
+    position: relative;
+    top: 48px;
     left: 10px;
     grid-area: previous;
 }
@@ -278,8 +281,8 @@
     background-image: url("../../../public/images/Frame.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    position:relative;
-    top:48px;
+    position: relative;
+    top: 48px;
     left: 48px;
     width: 16px;
     height: 32px;
@@ -288,7 +291,7 @@
 #bigCardPokeBallImage {
     position: absolute;
     top: 50px;
-    
+
     right: 10px;
     opacity: 0.3;
     background-image: url("../../../public/images/Pokeball.png");
@@ -299,13 +302,270 @@
     z-index: 1;
 }
 
-#bigCardParamsAbilities{
+#bigCardParamsAbilities {
     grid-area: text;
 }
 
-#bigcardabilities{
+#bigcardabilities {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
 
+}
+
+.group-buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+}
+
+:root {
+    --glow-color: hsl(11, 74%, 57%);
+    --glow-color-2: hsl(186 100% 69%);
+}
+
+.glowing-btn {
+    color: var(--glow-color);
+    cursor: pointer;
+    padding: 0.35em 1em;
+    border: 0.15em solid var(--glow-color);
+    border-radius: 0.45em;
+    background: none;
+    perspective: 2em;
+    font-family: "Raleway", sans-serif;
+    font-size: 2em;
+    font-weight: 900;
+    letter-spacing: 0.25em;
+
+    -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+        0px 0px 0.5em 0px var(--glow-color);
+    -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+        0px 0px 0.5em 0px var(--glow-color);
+    box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+        0px 0px 0.5em 0px var(--glow-color);
+    animation: border-flicker 2s linear infinite;
+}
+
+.glowing-btn-2 {
+    color: var(--glow-color-2);
+    cursor: pointer;
+    padding: 6px 16px;
+    border: 0.15em solid var(--glow-color-2);
+    border-radius: 0.45em;
+    background: none;
+    perspective: 2em;
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 900;
+    letter-spacing: 0.25em;
+
+    -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color-2),
+        0px 0px 0.5em 0px var(--glow-color-2);
+    -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color-2),
+        0px 0px 0.5em 0px var(--glow-color-2);
+    box-shadow: inset 0px 0px 0.5em 0px var(--glow-color-2),
+        0px 0px 0.5em 0px var(--glow-color-2);
+    animation: border-flicker 2s linear infinite;
+}
+
+.glowing-txt {
+    float: left;
+    margin-right: -0.8em;
+    -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+        0 0 0.45em var(--glow-color);
+    -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+        0 0 0.45em var(--glow-color);
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color);
+    animation: text-flicker 3s linear infinite;
+}
+
+.glowing-txt-2 {
+    float: left;
+    margin-right: -0.8em;
+    -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+        0 0 0.45em var(--glow-color);
+    -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+        0 0 0.45em var(--glow-color);
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color-2);
+    animation: text-flicker 3s linear infinite;
+}
+
+.faulty-letter {
+    opacity: 0.5;
+    animation: faulty-flicker 2s linear infinite;
+}
+
+.glowing-btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.7;
+    filter: blur(1em);
+    transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+    background: var(--glow-color);
+    pointer-events: none;
+}
+
+.glowing-btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    z-index: -1;
+    background-color: var(--glow-color);
+    box-shadow: 0 0 2em 0.2em var(--glow-color);
+    transition: opacity 100ms linear;
+}
+
+.glowing-btn:hover {
+    color: rgba(0, 0, 0, 0.8);
+    text-shadow: none;
+    animation: none;
+}
+
+.glowing-btn:hover .glowing-txt {
+    animation: none;
+}
+
+.glowing-btn:hover .faulty-letter {
+    animation: none;
+    text-shadow: none;
+    opacity: 1;
+}
+
+.glowing-btn:hover:before {
+    filter: blur(1.5em);
+    opacity: 1;
+}
+
+.glowing-btn:hover:after {
+    opacity: 1;
+}
+
+@keyframes faulty-flicker {
+    0% {
+        opacity: 0.1;
+    }
+
+    2% {
+        opacity: 0.1;
+    }
+
+    4% {
+        opacity: 0.5;
+    }
+
+    19% {
+        opacity: 0.5;
+    }
+
+    21% {
+        opacity: 0.1;
+    }
+
+    23% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 0.5;
+    }
+
+    83% {
+        opacity: 0.4;
+    }
+
+    87% {
+        opacity: 1;
+    }
+}
+
+@keyframes text-flicker {
+    0% {
+        opacity: 0.1;
+    }
+
+    2% {
+        opacity: 1;
+    }
+
+    8% {
+        opacity: 0.1;
+    }
+
+    9% {
+        opacity: 1;
+    }
+
+    12% {
+        opacity: 0.1;
+    }
+
+    20% {
+        opacity: 1;
+    }
+
+    25% {
+        opacity: 0.3;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0.7;
+    }
+
+    72% {
+        opacity: 0.2;
+    }
+
+    77% {
+        opacity: 0.9;
+    }
+
+    100% {
+        opacity: 0.9;
+    }
+}
+
+@keyframes border-flicker {
+    0% {
+        opacity: 0.1;
+    }
+
+    2% {
+        opacity: 1;
+    }
+
+    4% {
+        opacity: 0.1;
+    }
+
+    8% {
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0.7;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .glowing-btn {
+        font-size: 1em;
+    }
 }
