--- a/Front/src/Componentes/BigCard/bigCard.css
+++ b/Front/src/Componentes/BigCard/bigCard.css
@@ -319,6 +319,7 @@
     align-items: center;
     width: 100%;
     height: 3rem;
+    margin-top: 2rem;
 }
 
 :root {
@@ -329,13 +330,13 @@
 .glowing-btn {
     color: var(--glow-color);
     cursor: pointer;
-    padding: 0.35em 1em;
+    padding: 6px 16px;
     border: 0.15em solid var(--glow-color);
     border-radius: 0.45em;
     background: none;
     perspective: 2em;
     font-family: "Raleway", sans-serif;
-    font-size: 2em;
+    font-size: 16px;
     font-weight: 900;
     letter-spacing: 0.25em;
 
@@ -385,9 +386,9 @@
     float: left;
     margin-right: -0.8em;
     -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
-        0 0 0.45em var(--glow-color);
+        0 0 0.45em var(--glow-color-2);
     -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
-        0 0 0.45em var(--glow-color);
+        0 0 0.45em var(--glow-color-2);
     text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color-2);
     animation: text-flicker 3s linear infinite;
 }
@@ -411,6 +412,20 @@
     pointer-events: none;
 }
 
+.glowing-btn-2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.7;
+    filter: blur(1em);
+    transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+    background: var(--glow-color-2);
+    pointer-events: none;
+}
+
 .glowing-btn::after {
     content: "";
     position: absolute;
@@ -425,7 +440,27 @@
     transition: opacity 100ms linear;
 }
 
+.glowing-btn-2::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    z-index: -1;
+    background-color: var(--glow-color-2);
+    box-shadow: 0 0 2em 0.2em var(--glow-color-2);
+    transition: opacity 100ms linear;
+}
+
 .glowing-btn:hover {
+    color: rgba(0, 0, 0, 0.8);
+    text-shadow: none;
+    animation: none;
+}
+
+.glowing-btn-2:hover {
     color: rgba(0, 0, 0, 0.8);
     text-shadow: none;
     animation: none;
@@ -435,7 +470,17 @@
     animation: none;
 }
 
+.glowing-btn-2:hover .glowing-txt-2 {
+    animation: none;
+}
+
 .glowing-btn:hover .faulty-letter {
+    animation: none;
+    text-shadow: none;
+    opacity: 1;
+}
+
+.glowing-btn-2:hover .faulty-letter-2 {
     animation: none;
     text-shadow: none;
     opacity: 1;
@@ -446,7 +491,16 @@
     opacity: 1;
 }
 
+.glowing-btn-2:hover:before {
+    filter: blur(1.5em);
+    opacity: 1;
+}
+
 .glowing-btn:hover:after {
+    opacity: 1;
+}
+
+.glowing-btn-2:hover:after {
     opacity: 1;
 }
 
@@ -561,11 +615,5 @@
 
     100% {
         opacity: 1;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .glowing-btn {
-        font-size: 1em;
     }
 }
